@@ -9,7 +9,7 @@
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#0000EE" vlink="#551A8B" alink="#FF0000">
 
-<center><img SRC="Magick++.gif" height=134 width=464></center>
+<center><img SRC="Magick++.png" height=134 width=464></center>
 
 <p>Magick++ provides a simple C++ API to the ImageMagick image processing
 library which supports reading and writing a huge number of image formats
