@@ -126,7 +126,7 @@ environment variable to ':<tt>pserver:anonymous@cvs.simplesystems.org:/cvsroot'<
 prior to executing the commands in order to avoid specifying the -d option.
 <p>The CVS repository version of Magick++ does not include the configure
 script, Makefile.in, or libtool files required to build under Unix. To
-overcome this, ensure that you have GNU libtool 1.1.3, automake 1.4, and
+overcome this, ensure that you have GNU libtool 1.3.4, automake 1.4, and
 autoconf 2.13 installed and then execute
 <p><tt>&nbsp;./bootstrap</tt>
 <p>in the Magick++ directory prior to continuing with installation.
